@startuml

hide circle
skinparam linetype ortho

entity Roles {
  * Id : SERIAL <<PK>>
  --
  RoleName : VARCHAR(50)
}

entity Users {
  * Id : SERIAL <<PK>>
  --
  FullName : VARCHAR(100)
  Email : VARCHAR(150)
  PasswordHash : VARCHAR(255)
  RoleId : INT <<FK>>
  IsActive : BOOLEAN
  CreatedAt : TIMESTAMP
  UpdatedAt : TIMESTAMP
}

entity Categories {
  * Id : SERIAL <<PK>>
  --
  CategoryName : VARCHAR(100)
}

entity Priorities {
  * Id : SERIAL <<PK>>
  --
  PriorityName : VARCHAR(50)
}

entity Statuses {
  * Id : SERIAL <<PK>>
  --
  StatusName : VARCHAR(50)
}

entity Tickets {
  * Id : SERIAL <<PK>>
  --
  TicketReference : VARCHAR(50)
  Title : VARCHAR(150)
  Description : TEXT
  CreatedByUserId : INT <<FK>>
  AssignedToUserId : INT <<FK>>
  CategoryId : INT <<FK>>
  PriorityId : INT <<FK>>
  StatusId : INT <<FK>>
  CreatedAt : TIMESTAMP
  UpdatedAt : TIMESTAMP
  ResolvedAt : TIMESTAMP
  ClosedAt : TIMESTAMP
}

entity TicketComments {
  * Id : SERIAL <<PK>>
  --
  TicketId : INT <<FK>>
  UserId : INT <<FK>>
  CommentText : TEXT
  IsInternal : BOOLEAN
  CreatedAt : TIMESTAMP
}

entity TicketAttachments {
  * Id : SERIAL <<PK>>
  --
  TicketId : INT <<FK>>
  UploadedByUserId : INT <<FK>>
  FileName : VARCHAR(255)
  FilePath : VARCHAR(255)
  FileType : VARCHAR(100)
  FileSize : INT
  UploadedAt : TIMESTAMP
}

entity Notifications {
  * Id : SERIAL <<PK>>
  --
  UserId : INT <<FK>>
  TicketId : INT <<FK>>
  Message : TEXT
  IsRead : BOOLEAN
  CreatedAt : TIMESTAMP
}

entity TicketAssignmentHistory {
  * Id : SERIAL <<PK>>
  --
  TicketId : INT <<FK>>
  AssignedFromUserId : INT <<FK>>
  AssignedToUserId : INT <<FK>>
  AssignedByUserId : INT <<FK>>
  AssignedAt : TIMESTAMP
}

entity TicketStatusHistory {
  * Id : SERIAL <<PK>>
  --
  TicketId : INT <<FK>>
  OldStatusId : INT <<FK>>
  NewStatusId : INT <<FK>>
  ChangedByUserId : INT <<FK>>
  ChangedAt : TIMESTAMP
}

entity ActivityLogs {
  * Id : SERIAL <<PK>>
  --
  UserId : INT <<FK>>
  Action : VARCHAR(150)
  Description : TEXT
  CreatedAt : TIMESTAMP
}

Roles ||--o{ Users

Users ||--o{ Tickets : CreatedByUserId
Users ||--o{ Tickets : AssignedToUserId

Categories ||--o{ Tickets
Priorities ||--o{ Tickets
Statuses ||--o{ Tickets

Tickets ||--o{ TicketComments
Users ||--o{ TicketComments

Tickets ||--o{ TicketAttachments
Users ||--o{ TicketAttachments

Users ||--o{ Notifications
Tickets ||--o{ Notifications

Tickets ||--o{ TicketAssignmentHistory
Users ||--o{ TicketAssignmentHistory

Tickets ||--o{ TicketStatusHistory
Statuses ||--o{ TicketStatusHistory
Users ||--o{ TicketStatusHistory

Users ||--o{ ActivityLogs

@enduml
